[package]
name = "guessing_game_rodders"
version = "0.1.0"
authors = ["George Ormrod <georgeormrod@gmail.com>"]
edition = "2018"
description = "A Fun game where you guess a number the computer has chosen"
licence = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"